LU-8009 utils: Lustre_rsync does not sync files on MDT1

This patch fixes the 3rd parameter of llapi_changelog_start()
to refer a changelog correctly.

Signed-off-by: Tatsushi Takamura <takamr.tatsushi@jp.fujitsu.com>
Change-Id: I84ff553b299648159b8107fd9be486db44829ef2
Reviewed-on: http://review.whamcloud.com/19594
Tested-by: Jenkins
Reviewed-by: Andreas Dilger <andreas.dilger@intel.com>
Reviewed-by: Jian Yu <jian.yu@intel.com>
Tested-by: Maloo <hpdd-maloo@intel.com>
Reviewed-by: Oleg Drokin <oleg.drokin@intel.com>